# rsomics-macs

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  model.rs  peaks.rs  pileup.rs  tags.rs
tests/: compat.rs  model.rs  peaks.rs  pileup.rs
tests/golden/: chip_sim.bam  chip_sim.bam.bai  chip_sim.control_lambda.bdg  chip_sim.narrowPeak  chip_sim.summits.bed  chip_sim.treat_pileup.bdg  simulate_chip.py
